<resources>

    <!-- common string -->
    <string name="app_name">贰货1+1</string>
    <string name="female">女</string>
    <string name="select_sex_tip">请选择性别</string>
    <string name="change_phone_tip">更换联系方式</string>
    <string name="ok">确定</string>
    <!-- 快速登录对话框 -->
	<string name="app_fast_login_register_tip">还没账号? 去注册</string>
	<string name="app_fast_login_unknown_tip">未知错误</string>
	<string name="app_fast_login_illegalarguments_tip">非法参数</string>
	<string name="app_fast_login_usernameempty_tip">用户名不能为空</string>
	<string name="app_fast_login_usernameillegal_tip">用户名格式错误</string>
    <string name="app_fast_login_passwordempty_tip">密码不能为空</string>
    <string name="app_fast_login_passwordillegal_tip">密码格式错误</string>
    <string name="app_fast_login_phoneempty_tip">手机号码为空</string>
    <string name="app_fast_login_phoneillegal_tip">手机号码格式错误</string>
    <string name="app_fast_login_vertifycodeempty_tip">验证码不能为空</string>
	<string name="app_fast_login_vertifycodeincorrect_tip">验证码不正确</string>
    <string name="app_fast_login_username_password_incorrect_tip">用户名或密码不正确</string>
	
    <!-- XListView -->
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次刷新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- 底部Tab -->
    <string name="home">首页</string>
    <string name="nearby">附近</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <!-- 商品分类 -->
    <string name="category_all">全部</string>
    <string name="electric_appliance">家用电器</string>
    <string name="electric_product">电子产品</string>
    <string name="clothing">男装女装</string>
    <string name="vehicle">交通工具</string>
    <string name="decoration">鞋包配饰</string>
    <string name="book">书籍文体</string>
    <string name="household">居家用品</string>
    <string name="others">其它</string>
    <!-- 登录 -->
    <string name="please_login">请登录</string>
    
    
    <!-- mcb -->
    <!-- 首页Fragment头部文字 -->
    <string name="index_fragment_head_category">分类</string>
    <string name="index_fragment_head_sort">排序</string>
    <!-- 排序方式 -->
    <string name="newst_publish">最新发布</string>
    <string name="price_asc">价格从低到高</string>
    <string name="most_focus">最多关注</string>
    <string name="most_browse">最多浏览</string>
    <!-- 查看商品详情页面 -->
    <string name="write_comment_hint">请输入评论</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_focus">关注</string>
    <string name="goods_report">举报</string>
    <string name="goods_comment">评论</string>
    <string name="goods_comment_reply">回复</string>
    <string name="goods_report_input_hint">请输入您要举报该商品的原因</string>
    <string name="goods_report_cancel">取消</string>
    <string name="goods_report_ok">确定</string>
    <string name="contact_seller">客服</string>
    <string name="delete">删除</string>
    <!-- 搜索 -->
    <string name="search_goods">搜贰货</string>
    <string name="search">搜索</string>
    <string name="index_goods_search_edittext_hint">请输入关键字</string>
    <string name="history_record">历史记录</string>
    <string name="clear_search_history">清除搜索记录</string>
    <!-- 我的Fragment -->
    <string name="user_detail_head_more">更多</string>
    <string name="mine_publish_goods">我发布的贰货</string>
    <string name="mine_focus_goods">我关注的贰货</string>
    <string name="settings">设置</string>
    <string name="exit_account">退出账号</string>
    <string name="more_personality">更多信息</string>
    <string name="mine_sex">性别</string>
    <string name="mine_phone">联系方式</string>
    <!-- 设置 -->
    <string name="settings_version">版本更新</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_manual">用户须知</string>
    <string name="settings_cache_tip">正在计算</string>
    
    
    
    
    
    
    
     <!-- lyw -->
    <!-- app_login_choice -->
    <string name="login_direct">游客</string>
    <string name="login">登录</string>
    <!-- app_login -->
    <string name="icon_text">贰货  1＋ 1</string>
    <string name="login_erhuo">贰货号/手机号码</string>
    <string name="password">密码</string>
    <string name="get_code">获取验证码</string>
    <string name="login_code">验证码</string>
    <string name="login_forget_password">忘记密码?</string>
    <!-- app_register -->
    <string name="register_erhuo">起个好听的贰货号吧（4到15个字母或汉字）</string>
    <string name="register_password">密码（6到15个字母或者数字）</string>
    <string name="register_password_again">再次输入密码</string>
    <string name="phone">手机号码</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="verification">验证</string>
	<string name="new_password">请输入新的密码</string>
	<string name="new_password_again">再次输入密码</string>
	<string name="confirm">确定</string>
	<string name="publish">发布</string>
	<string name="publish_description">请描述你的贰货（200字内）</string>
	<string name="publish_voice_description">已语音</string>
	<string name="publish_text_number">200</string>
	<string name="publish_sort">选择分类：</string>
	<string name="publish_tel">联系方式：</string>
	<string name="publish_tel_hint">给个联系方式呗</string>
	<string name="publish_price">贰货价格(元)：</string>
	<string name="publish_price_hint">你还没标价呢</string>
	<string name="yuan">元</string>
	<string name="publish_date">选择期限(天)：</string>
	<string name="publish_position">位置：</string>
	<string name="guangzhou">广州</string>
	<string name="mine_scan">浏览数</string>
	<string name="mine_introduction">简介</string>
	<string name="mine_publish">我发布的贰货</string>
	<string name="mine_focus">我关注的贰货</string>
	<string name="mine_description">简介</string>
	<string name="setting">设置</string>
	<string name="mine_out">退出</string>
	<string name="mine_detail">个人信息</string>
	<string name="sex">性别</string>
	<string name="mine_declaration">我的贰货宣言</string>
	<string name="male">男</string>
    <string name="tian">天</string>
    <!-- nearby_select_city -->
    <string name="nearby_select_city_input">请输入城市名吧</string>
    <string name="nearby_select_city_current_position">当前位置:</string>
    <string name="dingwei">定位</string>
    <string name="hot_city">热门城市</string>
    <string name="nearby_select_city_search">请输入关键字（中文或拼音）</string>
    <string name="cancel">取消</string>
    <string name="nearby_select_city_dingwei">定位到目前所在城市</string>
    <!-- publish_spinner_layout -->
    <string name="publish_spinner_title">请选择</string>
    <!-- publish_fragment_bottom -->
    <string name="publish_fragment_bottom_take_phote">照片</string>
    <string name="publish_fragment_bottom_emoji">表情</string>
    <string name="publish_fragment_bottom_voice">语音</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
  
    
    
   
    
    
    
    
    <!-- yjf -->
    <string name="chat_picture">图片</string>
    <string name="chat_location">位置</string>
    <string name="chat_voice">语音</string>
    
    <string name="action_settings">Settings</string>
    <string name="chat_send_voice">按住说话</string>
    <string name="chat_select_picture">选择图片</string>
    <string name="chat_send_picture">发送</string>
    <string name="chat_finish_camera">完成</string>
    
    <string name="chat_finish_record_send">松开手指发送语音</string>
    <string name="chat_finish_record_abandon">向上滑动放弃录音</string>
    <string name="chat_add_avator">头像</string>
    
    <string name="chat_no_login_tip">快登录查看消息吧</string>
    
    
 
</resources>
