<?xml version="1.0" encoding="utf-8"?>
<!--
    App发布商品fragment布局	
    author:龙宇文
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">
<RelativeLayout 
    android:id="@+id/rl_publish_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/et_publish_fragment_description"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_publish_fragment_et_heigth"
        android:layout_marginLeft="@dimen/app_publish_fragment_marginletf_right"
        android:layout_marginRight="@dimen/app_publish_fragment_marginletf_right"
        android:layout_marginTop="@dimen/app_publish_fragment_margintop"
        android:background="@drawable/edittext_circle_shape"
        android:gravity="top"
        android:hint="@string/publish_description"
        android:maxLength="200" />

    <TextView
        android:id="@+id/tv_publish_fragment_text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/et_publish_fragment_description"
        android:layout_below="@+id/et_publish_fragment_description"
        android:gravity="center"
        android:text="@string/publish_text_number"
        android:textSize="@dimen/app_publish_fragment_textsize" />

    <ImageView
        android:id="@+id/iv_publish_fragment_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_publish_fragment_description"
        android:layout_toLeftOf="@+id/tv_publish_fragment_text_number"
        android:contentDescription="@string/publish_voice_description"
        android:src="@drawable/publish_voice_have"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_publish_fragment_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_publish_fragment_description"
        android:layout_below="@id/tv_publish_fragment_text_number"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_publish_fragment_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_sort"
            android:textSize="@dimen/app_publish_fragment_textsize" />

        <com.lym.twogoods.publish.ui.PublishSpinner
            android:id="@+id/sp_publish_fragment_category"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/publish_spinner_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_publish_fragment_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_publish_fragment_category"
        android:layout_below="@id/ll_publish_fragment_category"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_publish_fragment_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/publish_tel"
            android:textSize="@dimen/app_publish_fragment_textsize" />

        <EditText
            android:id="@+id/et_publish_fragment_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_circle_shape"
            android:hint="@string/publish_tel_hint"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_publish_fragment_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_publish_fragment_category"
        android:layout_below="@id/ll_publish_fragment_tel"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_publish_fragment_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_price"
            android:textSize="@dimen/app_publish_fragment_textsize" />

        <EditText
            android:id="@+id/et_publish_fragment_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_circle_shape"
            android:hint="@string/publish_price_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_publish_fragment_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_publish_fragment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_publish_fragment_category"
        android:layout_below="@id/ll_publish_fragment_price"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_publish_fragment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_date"
            android:textSize="@dimen/app_publish_fragment_textsize" />

        <com.lym.twogoods.publish.ui.PublishSpinner
            android:id="@+id/sp_publish_fragment_date"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/publish_spinner_background" />

        <TextView
            android:id="@+id/tv_publish_fragment_tian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_publish_fragment_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_publish_fragment_category"
        android:layout_below="@id/ll_publish_fragment_date"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_publish_fragment_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/publish_position"
            android:textSize="@dimen/app_publish_fragment_textsize" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/nearby_select_city_dingwei" />

        <TextView
            android:id="@+id/tv_publish_fragment_position_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/app_publish_fragment_textsize" />
    </LinearLayout>

        <GridView
            android:id="@+id/gv_publish_fragment_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_publish_fragment_gridview_left_right_padding"
            android:paddingRight="@dimen/app_publish_fragment_gridview_left_right_padding"
       		android:layout_below="@id/ll_publish_fragment_position"
       		android:gravity="center_horizontal"
            android:scrollbars="none">
        </GridView>
</RelativeLayout>
</ScrollView>