<?xml version="1.0" encoding="utf-8"?>
<!-- 
	App修改密码验证页面布局
	
	author:龙宇文
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_reset_password_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_reset_password__phone"
        android:layout_alignRight="@+id/btn_reset_password_verification"
        android:layout_below="@+id/et_reset_password__phone"
        android:layout_marginTop="@dimen/margintop"
        android:background="@drawable/app_normal_login_button_background"
        android:hint="@string/login_code" />

    <Button
        android:id="@+id/btn_reset_password_code_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_reset_password_code"
        android:layout_alignRight="@+id/et_reset_password__phone"
        android:layout_alignTop="@+id/et_reset_password_code"
        android:layout_toRightOf="@+id/et_reset_password_code"
        android:background="@color/transparent"
        android:textColor="@color/base_color_text_white"
        android:text="@string/get_code" />

    <Button
        android:id="@+id/btn_reset_password_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reset_password_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop"
        android:background="@drawable/app_normal_login_button_background"
        android:paddingLeft="@dimen/app_login_view_margin_right_left"
        android:paddingRight="@dimen/app_login_view_margin_right_left"
        android:text="@string/verification" />

    <EditText
        android:id="@+id/et_reset_password__phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/app_reset_passwrod_left_right_marigin"
        android:layout_marginTop="25dp"
        android:background="@drawable/app_normal_login_button_background"
        android:hint="@string/phone" />

</RelativeLayout>