<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/login_background" >

    <LinearLayout
        android:id="@+id/ll_app_login_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_app_login_activity_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_login_icon_text_top"
                android:text="@string/icon_text"
                android:textColor="#4d8ed6"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_app_login_activity_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_login_view_top"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_login_erhuo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_login_view_margin_right_left"
                android:layout_marginRight="@dimen/app_login_view_margin_right_left"
                android:background="@drawable/app_normal_login_button_background"
                android:gravity="center_horizontal"
                android:hint="@string/login_erhuo" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_login_view_top"
                android:layout_marginLeft="@dimen/app_login_view_margin_right_left"
                android:layout_marginRight="@dimen/app_login_view_margin_right_left"
                android:background="@drawable/app_normal_login_button_background"
                android:hint="@string/password"
                android:gravity="center_horizontal"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_login_view_margin_right_left"
                android:layout_marginRight="@dimen/app_login_view_margin_right_left"
                android:layout_marginTop="@dimen/app_login_view_top"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_login_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/app_normal_login_button_background"
                    android:hint="@string/login_code" />

                <Button
                    android:id="@+id/btn_login_code_get"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/get_code" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login_land"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_login_view_top"
                android:layout_marginLeft="@dimen/app_login_view_margin_right_left"
                android:layout_marginRight="@dimen/app_login_view_margin_right_left"
                android:background="@drawable/app_normal_login_button_background"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_login_view_top"
                android:text="@string/login_forget_password"
                android:textColor="#4d8ed6"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>