<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_new_password_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/app_register_left_right_margin"
        android:layout_marginTop="@dimen/margintop"
        android:background="@drawable/edittext_circle_shape"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_password_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/app_register_left_right_margin"
        android:layout_marginTop="@dimen/margintop"
        android:background="@drawable/edittext_circle_shape"
        android:hint="@string/new_password_again"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/btn_new_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop"
        android:background="@drawable/edittext_circle_shape"
        android:text="@string/confirm" />

</RelativeLayout>