<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal" >
    
    <TextView 
         android:clickable="true"
        android:onClick="toAction"
        android:id="@+id/message_chat_tv_picture"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:drawableTop="@drawable/message_chat_add_picture_selector"
        android:text="@string/chat_picture"
        />
    <TextView 
         android:clickable="true"
        android:onClick="toAction"
        android:id="@+id/message_chat_tv_voice"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/message_chat_add_voice_selector"
        android:text="@string/chat_voice"
        />
    <TextView 
        android:clickable="true"
        android:onClick="toAction"
        android:id="@+id/message_chat_tv_location"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/message_chat_add_location_selector"
        android:text="@string/chat_location"
        />

</LinearLayout>
